--- a/gb/17/2/12/n8802877.md
+++ b/gb/17/2/12/n8802877.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fuibmg3482/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/fuibmg3482/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/fuibmg3482/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fuibmg3482/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/fuibmg3482/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fuibmg3482/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/fuibmg3482/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fuibmg3482/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/fuibmg3482/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fuibmg3482/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/fuibmg3482/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fuibmg3482/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/fuibmg3482/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fuibmg3482/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/fuibmg3482/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fuibmg3482/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/fuibmg3482/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fuibmg3482/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/fuibmg3482/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fuibmg3482/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fuibmg3482/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fuibmg3482/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fuibmg3482/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fuibmg3482/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>宫野真守台湾首唱 自拍影像开场引爆气氛</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/02/1702120844291487-600x400.jpg" />
 <h6>日本人气声优宫野真守元宵节（11日）台湾开唱。（雅慕斯娱乐提供）
 </h6>
 <hr>
-	<p>【大纪元2017年02月13日讯】日本人气声优<ahref="https://github.com/fuibmg3482/djy/blob/master/gb/tag/%E5%AE%AB%E9%87%8E%E7%9C%9F%E5%AE%88.md#1">宫野真守</a>于元宵节（11日）当天在台湾开唱，演唱会在他拍摄的开场影片中揭开序幕。故事描述在房间看电视的宫野真守突然被吸进电视世界的奇幻故事，电视中出现的角色也都由宫野真守饰演。</p>
-<p>影片传达出现实生活与电视世界混合在一起的概念。在片尾，为呼应全场歌迷的热情，<ahref="https://github.com/fuibmg3482/djy/blob/master/gb/tag/%E5%AE%AB%E9%87%8E%E7%9C%9F%E5%AE%88.md#1">宫野真守</a>以一袭黑色酷劲装扮自影像中的电视世界跃上舞台，立刻吸引全场热烈回响与欢呼。</p>
+	<p>【大纪元2017年02月13日讯】日本人气声优<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%AE%AB%E9%87%8E%E7%9C%9F%E5%AE%88.md#1">宫野真守</a>于元宵节（11日）当天在台湾开唱，演唱会在他拍摄的开场影片中揭开序幕。故事描述在房间看电视的宫野真守突然被吸进电视世界的奇幻故事，电视中出现的角色也都由宫野真守饰演。</p>
+<p>影片传达出现实生活与电视世界混合在一起的概念。在片尾，为呼应全场歌迷的热情，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%AE%AB%E9%87%8E%E7%9C%9F%E5%AE%88.md#1">宫野真守</a>以一袭黑色酷劲装扮自影像中的电视世界跃上舞台，立刻吸引全场热烈回响与欢呼。</p>
 <p><strong>嘴甜送玫瑰飞吻 演唱最新双单曲</strong></p>
 <p>演唱会开场曲选唱了去年5月所推出的第14支单曲《SHOUT!》，宫野真守充满力道的歌声与卖力的演出，震撼全场。第三首歌曲《Sugar, Sugar》时，宫野真守用中文说：“好美的玫瑰，有谁想要吗？”边唱边亲吻玫瑰花抛向观众席中。</p>
 <figure id="attachment_8802952" aria-describedby="caption-attachment-8802952" style="width: 300px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/02/1702120843111487.jpg"><img class=" wp-image-8802952" title="" src="https://i.epochtimes.com/assets/uploads/2017/02/1702120843111487.jpg" alt="" width="300" b="450" /></a><figcaption id="caption-attachment-8802952" class="wp-caption-text">日本人气声优宫野真守元宵节（11日）台湾开唱。（雅慕斯娱乐提供）</figcaption></figure>
@@ -24,41 +24,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/16/8/15/n8201125.md#1">日声优小泽亚李海外签名会 粉丝争睹风采</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/16/10/5/n8366664.md#1">入围金马影帝遭呛 柯震东磨练成长　</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/16/10/13/n8393916.md#1">宫野真守月底启动日本巡演 海外首场访台</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/16/11/30/n8544514.md#1">台影视圈南向拓展 安心亚张立昂等演员力挺</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/15/n8201125.md#1">日声优小泽亚李海外签名会 粉丝争睹风采</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/10/5/n8366664.md#1">入围金马影帝遭呛 柯震东磨练成长　</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/10/13/n8393916.md#1">宫野真守月底启动日本巡演 海外首场访台</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/11/30/n8544514.md#1">台影视圈南向拓展 安心亚张立昂等演员力挺</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/26/n9894907.md#1" target="_blank">毛时代的诗坛乱象</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/16/n11118029.md#1" target="_blank">阿肯色州参议院通过决议案 制止中共强摘器官</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/6/n9929355.md#1" target="_blank">尹曙生：触目惊心的杀人运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/4/n8065341.md#1" target="_blank">我和孩子经历的神话（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/22/1/12/n13498418.md#1">【百年真相】掀开江姐的“英雄”面纱</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/22/1/12/n13500792.md#1">【未解之谜】宇宙是意识的产物？！</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/22/1/11/n13497077.md#1">黄檗禅师预言诗  解当今之局</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/22/1/13/n13501136.md#1">【奇缘】找到属猪的人富贵30年 北宋名将张永德奇缘</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/22/1/12/n13500661.md#1">【未解之谜】营口坠龙事件背后的玄机</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/22/1/17/n13511405.md#1">【新闻看点】天津传20日清零 北京承认共存？</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/22/1/14/n13505150.md#1">【百年真相】接班人到阶下囚 王洪文的官场浮沉</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/22/1/18/n13514157.md#1">【秦鹏直播】追随立陶宛 又一国欲与台互设代表处</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/22/1/16/n13509050.md#1">被抢救48小时 险成植物人 李嘉欣病因曝光</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/22/1/17/n13511372.md#1">中国出生率一降再降 专家：人口危机超想像</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/22/1/17/n13510125.md#1">内斗升级？ 习亲信陈一新放话力保二十大</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/22/1/16/n13509050.md#1">被抢救48小时 险成植物人 李嘉欣病因曝光</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/22/1/18/n13511813.md#1">命理师预言中共灭亡时间 台名嘴郑弘仪惊讶</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/22/1/16/n13509172.md#1">因监督减肥被邓超改称呼 孙俪笑说自己地位提升</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/22/1/17/n13509373.md#1">瘦身成功 弹古琴庆生 朱孝天笑称照片修过头</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/22/1/16/n13508340.md#1">曾沛慈晒婚纱照宣布结婚 今低调宴客</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/22/1/15/n13506631.md#1">红豆汤降血压、消水肿 2方法不再煮不烂</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/22/1/16/n13508778.md#1">中医10种好方法可帮助维护记忆力</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/22/1/14/n13505354.md#1">天冷什么羽绒服最暖？4秘诀挑选不失手</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/22/1/12/n13499853.md#1">人体对新冠有天然免疫力？1种血型不易感染</a></li>
-<li><a href="https://github.com/fuibmg3482/djy/blob/master/gb/22/1/17/n13510890.md#1">为什么生姜是冬天的终极食材</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fuibmg3482/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fuibmg3482/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/2/12/n8802877.htm">宫野真守台湾首唱 自拍影像开场引爆气氛</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/2/12/n8802877.htm">宫野真守台湾首唱 自拍影像开场引爆气氛</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fuibmg3482/djy/blob/master/gb/17/2/12/n8802877.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fuibmg3482/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fuibmg3482/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fuibmg3482/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fuibmg3482/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fuibmg3482/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fuibmg3482/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fuibmg3482/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fuibmg3482/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fuibmg3482/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/fuibmg3482/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fuibmg3482/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fuibmg3482/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/fuibmg3482/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fuibmg3482/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fuibmg3482/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fuibmg3482/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fuibmg3482/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fuibmg3482/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fuibmg3482/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fuibmg3482/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fuibmg3482/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fuibmg3482/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fuibmg3482/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fuibmg3482/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fuibmg3482/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/17/2/12/n8802877.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
